--- a/gui/qml.qrc
+++ b/gui/qml.qrc
@@ -1,5 +1,6 @@
 <RCC>
     <qresource prefix="/">
         <file>main.qml</file>
+        <file>images/logo_transparent.png</file>
     </qresource>
 </RCC>
