Re-structure lodge source code
Library code and front end code decoupled. Front end code is a
layer on top of the lodge_lib now.

CMake has updated to reflect this new stucture.

--- a/gui/qml.qrc
+++ b/gui/qml.qrc
@@ -1,6 +1,6 @@
 <RCC>
     <qresource prefix="/">
-        <file>main.qml</file>
+        <file>qml/main.qml</file>
         <file>qml/encodeView.qml</file>
         <file>qml/decodeView.qml</file>
         <file>qml/BackButton.qml</file>
